Colocando os botões em vermelho para testar

--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ h3{
 
 #contactForm button{
     color: #FFFFFF;
-    background-color: #1f7cff;
+    background-color: #ff1f1f;
     border-radius: 550px;
     font-family: Poppins;
     font-style: normal;
